--- a/play-services-core/src/main/res/values/strings.xml
+++ b/play-services-core/src/main/res/values/strings.xml
@@ -47,13 +47,6 @@ This can take a couple of minutes"</string>
     <string name="service_name_mcs">Cloud messaging</string>
     <string name="service_name_snet">Google SafetyNet</string>
 
-    <string name="service_status_disabled">Disabled</string>
-    <string name="service_status_enabled">Enabled</string>
-    <string name="service_status_automatic">Automatic</string>
-    <string name="service_status_manual">Manual</string>
-    <string name="service_status_enabled_short">On</string>
-    <string name="service_status_disabled_short">Off</string>
-
     <string name="games_title">Google Play Games</string>
     <string name="games_info_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use Play Games</string>
     <string name="games_info_content">To use Play Games it is required to install the Google Play Games app. The application might continue without Play Games, but it is possible that it will behave unexpectedly</string>
@@ -118,7 +111,7 @@ This can take a couple of minutes"</string>
     <string name="pref_auth_trust_google_summary">When disabled, the user is asked before an apps authorization request is sent to Google. Some applications will fail to use the Google account if this is disabled</string>
     <string name="pref_auth_visible_title">Allow apps to find accounts</string>
     <string name="pref_auth_visible_summary">When enabled, all applications on this device will be able to see email address of your Google Accounts without prior authorization</string>
-
+    <string name="brand_spoof_button">Huawei</string>
     <string name="pref_checkin_enable_summary">Registers your device to Google services and creates a unique device identifier. MicroG strips identifying bits other than your Google account name from registration data</string>
     <string name="pref_device_registration_android_id">Android ID</string>
 
